fix: SlideGetStarted on small screens

--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -295,7 +295,7 @@ $blendModeHeaderZ: 2;
 
 .slideGetStarted {
   flex-grow: 1;
-  margin: 80px 0 0 12%;
+  margin: 80px 12% 0;
 
   .titleText {
     max-width: 376px;
@@ -324,8 +324,9 @@ $blendModeHeaderZ: 2;
 
   .cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
-    margin-top: 40px;
+    margin: 40px 0;
   }
 
   @media (max-width: $mobileBreakPoint) {
